memo/memo-with-references/tests/fail-not-lifetime.stderr
error: expected lifetime
 --> tests/fail-not-lifetime.rs:3:8
  |
3 | #[memo(a)]
  |        ^
